Merged revisions 74917 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r74917 | thomas.heller | 2009-09-18 20:55:17 +0200 (Fr, 18 Sep 2009) | 3 lines

  Issue #5042: Structure sub-subclass does now initialize correctly with
  base class positional arguments.
........